_less/rtl.less
/*Language specific styles that override default*/

/*Styles for HTML tags*/

body{
	font-family:'DroidNaskh', sans-serif;
	direction:rtl;
}
h1,h2{
	font-family:'DroidNaskh', sans-serif;
}
h2,h3{
	text-align:right;
}
ul{
	padding-right:20px;
	padding-left:auto;
	margin-right:0;
}
p{
	line-height:2em;
}

/*Styles for whole website*/

.head{
	direction:ltr;
}
.lang li ul li{
	font-family:Arial, sans-serif;
	text-align:right;
}
.menusimple li a,
.menusimple li a:active,
.menusimple li a:visited,
.menusimple li a:link{
	font-family:'DroidNaskh', sans-serif;
	text-align:right;
}
.menusimple li ul{
	right:0;
	left:auto;
}
.footermenu{
	display:inline-block;
}
.footermenu a{
	margin-right:0;
	margin-left:15px;
}
.titleicon{
	margin-right:auto;
	margin-left:5px;
}
h1 .rssicon{
	margin-left:0;
	margin-right:10px;
	margin-bottom:12px;
}
h2 .rssicon{
	margin-left:0;
	margin-right:10px;
	margin-bottom:18px;
}
.mainbutton a,
.mainbutton a:link,
.mainbutton a:visited,
.mainbutton a:active{
	font-family:'DroidNaskh', sans-serif;
	text-align:right;
	padding:15px 68px 15px 20px;
}
.mainbutton img{
	margin-left:10px;
	margin-right:-52px;
}
.contributors{
	text-align:right;
}
.contributors div{
	direction:ltr;
}
.downloadbox div{
	text-align:right;
}
.previewrow{
	text-align:right;
}
.previewrow>div{
	margin-right:auto;
	margin-left:15px;
}
.previewrow>div>a{
	line-height:1.2em;
	font-family:Arial, sans-serif;
}
.previewrow>div:first-child+div+div,
.previewrow>div:first-child+div+div+div+div+div{
	margin-left:0;
}
.previewrow>div>div>div>span{
	right:auto;
	left:30px;
}
.previewrow>div>div>div>h2{
	text-align:right;
	font-family:Arial, sans-serif;
}
.previewrow>div>div>div>h2:first-child+span+p{
	line-height:1.5em;
}
.index a,
.index a:link,
.index a:active,
.index a:visited{
	line-height:2em;
}
.pleftfloat img{
	float:right;
	margin-right:auto;
	margin-left:10px;
}
.resources{
	text-align:right;
}
.resources>div>div:first-child{
	padding-right:0;
	border-right:0;
	padding-left:40px;
	border-left:1px solid #e0e0e0;
}
.resources>div>div:first-child+div{
	padding-left:0;
	border-left:0;
	margin-left:0;
	padding-right:40px;
	border-right:1px solid #e0e0e0;
	margin-right:-1px;
}
.resourcesorg{
	text-align:right;
}
.resourcesorg img{
	margin-right:0;
	margin-left:5px;
	bottom:-6px;
}
.downloadbox a{
	direction:ltr;
}
.downloadbox small{
	direction:ltr;
}
.downloadbox div div{
	text-align:right;
	font-family:Arial, sans-serif;
}
.downloadbox small{
	right:40px;
	left:0;
}

.mainlist>div>div{
	text-align:right;
}
.mainlist img{
	margin-left:10px;
	float:right;
}

.start{
	text-align:right;
}
.start>div>div:first-child{
	padding-right:0;
	padding-left:40px;
	border-right:0;
	border-left:1px solid #e0e0e0;
}
.start>div>div:first-child+div{
	padding-left:0;
	padding-right:40px;
	border-left:0;
	border-right:1px solid #e0e0e0;
	margin-right:-1px
}
.start div div div a,
.start div div div a:link,
.start div div div a:active,
.start div div div a:visited{
	padding:0 8px;
}

.foundation-banner a,
.foundation-banner a:link,
.foundation-banner a:active,
.foundation-banner a:visited{
	direction:ltr;
	display:inline-block;
	margin-left:0;
	margin-right:6px;
}

.eventtable div div{
	text-align:right;
	padding-right:0;
	padding-left:20px;
}

.tablehalf{
	left:0;
	right:-40px;
}
.tablehalf div{
	margin-left:0;
	margin-right:40px;
}
.tablehalf p{
	text-align:right;
}
	
/*Override UbuntuBold by Droid Naskh*/

@font-face{font-family:'DroidNaskh';src:url('/font/droidnaskh/droidnaskh-regular.eot');font-weight:normal;font-style:normal;}
@font-face{font-family:'DroidNaskh';src:url('/font/droidnaskh/droidnaskh-regular.ttf') format('truetype');font-weight:normal;font-style:normal;}

/*Styles specific to mobiles*/

@media handheld, only screen and (max-device-height: 37em), only screen and (max-device-width: 50em){
	h1{
		text-align:right;
	}
	.summary{
		text-align:right;
	}
	.content{
		position:static;
		padding:15px 10px 20px 10px;
		text-align:right;
	}
	.footermenu{
		display:block;
	}
	.resources>div>div:first-child{
		padding-left:0;
		border-left:0;
	}
	.resources>div>div:first-child+div{
		border-right:0;
		padding-right:0;
		margin-right:0;
	}
	.download{
		text-align:right;
	}
	.download p{
		text-align:right;
	}
	.downloadbox{
		text-align:right;
	}
	.download h1,
	.download h2{
		text-align:right;
	}
	.download div p{
		text-align:right;
	}
	.mainlist>div:first-child,
	.mainlist>div:first-child+div,
	.mainlist>div:first-child+div+div{
		text-align:right;
	}
	.start>div>div:first-child{
		border-left:0;
		padding-left:0;
	}
	.start>div>div:first-child+div{
		border-right:0;
		padding-right:0;
		margin-right:0;
	}
	.tablehalf div{
		margin-right:0;
	}
}

